CLI-CTF/main.tf
locals {
  prefix       = "awscli-ctf"
  ecs_vcpu     = "256"
  ecs_memory   = "512"
  rds_user     = "ctfd_admin"
  rds_pass     = "StrongPasswordHere"
  region       = "us-east-1"
  current_date = formatdate("MMDDYYYYhhmm", timestamp())
}

provider "aws" {
  region = "us-east-1" # Set your desired AWS region
}

#Create the CTF user account
resource "aws_iam_user" "awscli_ctf_user" {
  name = "awscli-ctf-user"
}

resource "aws_iam_user_policy_attachment" "view_only_policy_attachment" {
  user       = aws_iam_user.awscli_ctf_user.name
  policy_arn = "arn:aws:iam::aws:policy/ReadOnlyAccess"
}

resource "aws_iam_access_key" "awscli_ctf_user_access_key" {
  user = aws_iam_user.awscli_ctf_user.name
}

output "awscli_ctf_user_access_key_id" {
  value = aws_iam_access_key.awscli_ctf_user_access_key.id
}

output "awscli_ctf_user_secret_access_key" {
  value     = aws_iam_access_key.awscli_ctf_user_access_key.secret
  sensitive = true
}

#SSH Key

resource "tls_private_key" "ssh_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

#CTF Bastion/Jumphost
resource "aws_instance" "ctf_jumphost_ec2" {
  ami                         = data.aws_ami.latest_amazon_linux.id
  instance_type               = "t2.micro"                      # Replace with the desired instance type
  subnet_id                   = aws_subnet.ctf_public_subnet.id #put in Public Subnet
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.ctf_web_sg.id]
  user_data                   = <<-EOF
    #!/bin/bash
    sudo su
    yum update -y
    yum install -y jq
  EOF
  key_name = tls_public_key.ssh_key.id



  tags = {
    Name = "CTF_JumpHost_Only"
  }
}

output "ssh_public_key" {
  value = tls_public_key.ssh_key.public_key_pem
  description = "SSH public key for EC2 instance"
}

output "ssh_private_key" {
  value       = tls_private_key.ssh_key.private_key_pem
  description = "SSH private key for EC2 instance"
  sensitive   = true
}


###########################################
######### Challenges Resources ############
###########################################

#Create the Hello-World Bucket
resource "aws_s3_bucket" "S3HelloWorldBucket" {
  bucket = "bucketsofun-${local.current_date}-flag-h3llow0rld" # Flag Bucket
  #bucket = "testbucket-jslkdfja123810923u0us08afd8af08sad0"
  tags = {
    Note = "Great_Job_you_found_the_first_flag"
  }
}


#Setup CTF Network

resource "aws_vpc" "this" {
  cidr_block = "10.255.255.0/24"
  tags = {
    Name = "${local.prefix}_Network"
  }
}

# Setup Internet for Public Subnets
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${local.prefix}-internet-gateway"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${local.prefix}-public-route-table"
  }
}

resource "aws_route" "internet_access" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.this.id
}

resource "aws_route_table_association" "public_subnet" {
  subnet_id      = aws_subnet.ctf_public_subnet.id
  route_table_id = aws_route_table.public.id
}

resource "aws_subnet" "ctf_public_subnet" {
  vpc_id            = aws_vpc.this.id
  cidr_block        = "10.255.255.0/25"
  availability_zone = "us-east-1c" # Set the desired availability zone
  tags = {
    Name = "Public Subnet"
  }
}

resource "aws_subnet" "ctf_private_subnet" {
  vpc_id            = aws_vpc.this.id
  cidr_block        = "10.255.255.128/25"
  availability_zone = "us-east-1a" # Set the desired availability zone
  tags = {
    Name = "Private Subnet"
  }
}

resource "aws_eip" "ctf_ec2_web_eip" {
  vpc = true
}

#Create an EC2 Web Server in deployed region where the user needs to find the webpage
#to get the flag
data "aws_ami" "latest_amazon_linux" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
}

resource "aws_instance" "ctf_web_ec2" {
  ami                         = data.aws_ami.latest_amazon_linux.id
  instance_type               = "t2.micro"                      # Replace with the desired instance type
  subnet_id                   = aws_subnet.ctf_public_subnet.id #put in Public Subnet
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.ctf_web_sg.id]

  user_data = <<-EOF
    #!/bin/bash
    sudo su
    yum update -y
    yum install -y httpd.x86_64
    yum install -y jq
    REGION_AV_ZONE=`curl -s http://169.254.169.254/latest/dynamic/instance-identity/document | jq .availabilityZone`
    systemctl start httpd.service
    systemctl enable httpd.service
    echo "<h1>Welcome CloudSource! </h1>" > /var/www/html/index.html
    echo "<br>The Flag is the Availability Zone: <b>$REGION_AV_ZONE </b>" >> /var/www/html/index.html
    service httpd start
  EOF

  tags = {
    Name = "CTF_Web_EC2"
  }
}

resource "aws_security_group" "ctf_web_sg" {
  name        = "ctf-web-sg"
  description = "Security group for CTF web server"
  vpc_id      = aws_vpc.this.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


#Create an EC2 in another region that exists soley as a flag for the Far Away challenge



#Bucket with random prefixes

#Upload CTF Files

resource "aws_s3_bucket" "awsctf_random_prefixes_bucket" {
  bucket = "awsctffiles-bucket-${local.current_date}-1234567890"
  tags = {
    Note = "Nothing_to_see_here_i_promise"
  }
}

resource "aws_s3_object" "awsctf_files_bucket_ctf_flag_png" {
  bucket = aws_s3_bucket.awsctf_random_prefixes_bucket.id
  key    = "/maze-direction-left/maze-up/download-me.png"
  source = "./download-me.png" # Set the local file path
}
